<resources>
    <string name="app_name">Anime Kingdom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Top Upcoming Anime</string>
    <string name="menu_gallery">Top Airing Anime</string>
    <string name="menu_slideshow">Top Anime TV Series</string>
    <string name="menu_tools">Top Anime Movies</string>
    <string name="menu_share">Top Anime OVA Series</string>
    <string name="specai">Top Anime Specail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
